fix: encode target

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 648,
+   "execution_count": 702,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "import seaborn as sns\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder, OrdinalEncoder\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder, OrdinalEncoder, LabelEncoder\n",
     "\n",
     "from warnings import filterwarnings\n",
     "filterwarnings(\"ignore\")\n",
@@ -4217,6 +4217,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Label Encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 704,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lc = LabelEncoder()\n",
+    "lc = lc.fit(data1['Credit_Score'])\n",
+    "\n",
+    "for dataset in data_cleaner:\n",
+    "    dataset['Credit_Score'] = lc.transform(dataset['Credit_Score'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Modeling"
    ]
   },
@@ -4229,7 +4249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 691,
+   "execution_count": 695,
    "metadata": {},
    "outputs": [
     {
@@ -4237,7 +4257,8 @@
      "output_type": "stream",
      "text": [
       "(64000, 36) (64000,)\n",
-      "(16000, 36) (16000,)\n"
+      "(16000, 36) (16000,)\n",
+      "(20000, 36) (20000,)\n"
      ]
     }
    ],
@@ -4245,10 +4266,21 @@
     "X = data1.drop(columns=['Credit_Score']).values\n",
     "y = data1['Credit_Score'].values\n",
     "\n",
+    "X_test = test.drop(columns=['Credit_Score']).values\n",
+    "y_test = test['Credit_Score'].values\n",
+    "\n",
     "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "print(X_train.shape, y_train.shape)\n",
-    "print(X_val.shape, y_val.shape)"
+    "print(X_val.shape, y_val.shape)\n",
+    "print(X_test.shape, y_test.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
