--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -3944,7 +3944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -3976,12 +3976,12 @@
     "\n",
     "X_resampled, y_resampled = oversample.fit_resample(X, y)\n",
     "\n",
-    "tes = pd.concat([X_resampled, y_resampled], axis=1)\n",
-    "tes['Credit_Score'].value_counts().plot.pie(autopct='%1.1f%%')\n",
+    "oversampled_data = pd.concat([X_resampled, y_resampled], axis=1)\n",
+    "oversampled_data['Credit_Score'].value_counts().plot.pie(autopct='%1.1f%%')\n",
     "plt.tight_layout()\n",
     "plt.ylabel('')\n",
     "plt.show()\n",
-    "print(tes['Credit_Score'].value_counts())"
+    "print(oversampled_data['Credit_Score'].value_counts())"
    ]
   },
   {
@@ -3993,13 +3993,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data1.to_csv('cleaned/train_cleaned.csv', index=False)\n",
+    "oversampled_data.to_csv('cleaned/train_cleaned.csv', index=False)\n",
     "test.to_csv('cleaned/test_cleaned.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
